--- a/songs-mass/dicsoseg-d36.tex
+++ b/songs-mass/dicsoseg-d36.tex
@@ -28,9 +28,7 @@
     \[C]Hálát adunk \[A]Néked \[C]nagy dicsősége\[A]dért!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Urunk és ^Istenünk, ^mennyei ^Király, ^mindenható Atya^isten.
@@ -38,9 +36,7 @@
     ^ Isten Bárá^nya, az ^Atyának Fi^a.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Te ^elveszed a ^világ ^bűne^it, ^ irgalmazz ^nékünk!
@@ -48,9 +44,7 @@
     ^Te, aki az ^Atyának ^jobbján \[G]ülsz, \[C] irgalmazz \[A]nékünk!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Mert egye^dül ^Te vagy a ^Szent, \[F#m]Te vagy az \[Hm]Úr,
