--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -40,9 +40,7 @@
     ^Melegét szórja ^rád, és a ^fák rügyeiket ^kibontják. \echo{^kibontják}
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Szívemben boldog^ság, mert az ^Úr, az Isten az ^én Atyám. \echo{igen, az ^én Atyám}
