--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -34,9 +34,7 @@
     Tiszta ^szívvel ^áldjuk ^Őt!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Aki ^Benne ^hisz, sose ^szomja^zik,
@@ -45,8 +43,6 @@
     Tölts be ^minket, ^Szeretet! ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
