--- a/songs/aldom-szent-neved.tex
+++ b/songs/aldom-szent-neved.tex
@@ -42,8 +42,6 @@
     A \[A]szívem így fe\[E]lel, hogy \[F#m]áldom \[E]szent ne\[D]ved! :/ \rep{2}
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
