--- a/songs/almaimbol-lelkembol.tex
+++ b/songs/almaimbol-lelkembol.tex
@@ -35,8 +35,6 @@
     Elcsüggedt ^szívű, magányos ^vándor, sose ^f^{\_{é}}lj!
   \endverse
 
-  \beginverse*
-    Refrén \[A] \[D]
-  \endverse
+  \refrain{\[A] \[D]}
 
 \endsong
