--- a/songs/antioch-dal.tex
+++ b/songs/antioch-dal.tex
@@ -18,9 +18,7 @@
     ^Gyere, gyere, gyere és énekelj, hogy ^jól szóljon ^ a dalunk:
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     \[C] Amikor ti hívtatok, \[G]úgy éreztem, kő vagyok,
@@ -33,8 +31,6 @@
     ^Gyere, gyere, gyere és énekelj, hogy ^jól szóljon ^ a dalunk:
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
