--- a/songs/atya-aldott-legyel.tex
+++ b/songs/atya-aldott-legyel.tex
@@ -15,26 +15,20 @@
     Amint a \[Em]mennyben a te \[Am]szentje\[D]id, \[H7]dicsérünk \[Em]Téged itt a \[Am]földön \[D]is.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Jézu^sunk, a mi ^Pártfogónk, ^Te vagy a mi ^Szabadí^tónk,
     Egyszü^lött, kit nekünk ^ad az A^tya, ^jöjj, U^runk, ma hívunk: ^Marana ^tha!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Szállj le ^ránk, Lélek^istenünk, ^az utunkon ^légy ve^lünk!
     Jöjj, ve^zess, Te vagy az ^Élte^tőnk, ha ^fára^dunk, kérünk ^adj e^rőt!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
