--- a/songs/atya-teremto-szeretet-lelke.tex
+++ b/songs/atya-teremto-szeretet-lelke.tex
@@ -22,9 +22,7 @@
     ^Megbocsátás ^irgalmas Lelke, ^ áradj ^szét!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Szabadságom ^tüzes Lelke, ^ áradj ^szét!
@@ -33,9 +31,7 @@
     ^Békességem ^gyönyörű Lelke, ^ áradj ^szét!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Dicsőítlek, ^Atya Lelke, ^ szent kegye^lem!
@@ -44,8 +40,6 @@
     ^Tarts meg engem, ^szeretet Lelke, ^Te vagy Iste^nem!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
