--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -19,9 +19,7 @@
     ^Hűtlenségem ^nem hánytorga^tod! ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Atyám, két ke^zedben ^bátran sírha^tok,
@@ -30,8 +28,6 @@
     ^Bűneimmel ^én szegeztem ^fel! ^
   \endverse
 
-  \beginverse*
-    Refrén \ifchorded{\nolyrics (A legvégén \[G] nélkül.)}\fi
-  \endverse
+  \refrain{\ifchorded{\nolyrics (A legvégén \[G] nélkül.)}\fi}
 
 \endsong
