--- a/songs/atyam-tied-vagyok.tex
+++ b/songs/atyam-tied-vagyok.tex
@@ -18,17 +18,13 @@
     ^Dicsőség ^szent neved^nek! ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Lélek, Tied ^vagyok, és ^szüntelen i^mádlak!
     ^Dicsőség ^szent neved^nek! ^
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
