--- a/songs/ave-maria.tex
+++ b/songs/ave-maria.tex
@@ -15,9 +15,7 @@
     Mert \[C]van egy \[D]drága i\[G]mánk!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Térden ^állva ^hívunk Té^ged,
@@ -26,8 +24,6 @@
     Ó ^add, hogy ^lássuk Fi^ad!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
