--- a/songs/baranyom-baranyom.tex
+++ b/songs/baranyom-baranyom.tex
@@ -31,9 +31,7 @@
     ^Kertedként ^áp{\_{o}}^lom a ^lelke^met.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \ifchorded
     \beginverse*
