--- a/songs/bizom-benned.tex
+++ b/songs/bizom-benned.tex
@@ -24,9 +24,7 @@
     \[Am]Tudom, hogy \[Em]Nélküled \[C]nem élhe\[D]t{\_{e}}k.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^ Nézd, a szívem már Ti^éd!
@@ -37,8 +35,6 @@
     ^Tudom, hogy ^Nélküled ^nem élhe^t{\_{e}}k!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2} \[G]
-  \endverse
+  \refrain[2]{\[G]}
 
 \endsong
