--- a/songs/csak-jezusnak-szolgalok.tex
+++ b/songs/csak-jezusnak-szolgalok.tex
@@ -13,53 +13,41 @@
     \[Em]Áldjad, minden \[Hm]nép, \[C]dicsérd szent ne\[G]vét, \[G]most és \[C]mindörökké, \[D]{\_{á}}\[G]men!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Hálát adja^tok, ^áldást mondja^tok, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Egyházad di^csér ^nagy jóságo^dért, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Erős vár az ^Úr, ^menedéket ^nyújt, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Áldott irga^lom, ^véred olta^lom, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Hatalmas az ^Úr, ^jóságos az ^Úr, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Szívem áldja ^Őt, ^ujjongjon a ^Föld, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Szentek, angya^lok, ^szeráfkóru^sok, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Néked zenge^nek, ^így ünnepel^nek, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Áldott légy ^Atya, ^s egyszülött ^Fia, ^most és ^mindörökké, ^{\_{á}}^men!
     ^Éltető Lé^lek, ^Téged dicsér^lek, ^most és ^mindörökké, ^{\_{á}}^men!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
