--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -49,17 +49,13 @@
 %     Jöjj Szentlélek, szállj közénk, hozz a mennyből szép, tiszta fényt!
 %   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     És az ^élet, ^íme, megjele^nt, ^ köztünk ^él Ő ^ Szentlelké^ben.
     Hív Ő ^téged, ^ hogy élj Ve^le, add át ^Néki ^ a szíve^det!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
