--- a/songs/elhetunk.tex
+++ b/songs/elhetunk.tex
@@ -20,9 +20,7 @@
     \[G]És az öröm, melyet adtál, \[A]kiárad a \[A4]Földre!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Fénysugár, mely megvilágít ^mindent a Földön,
@@ -32,9 +30,7 @@
     ^Ez az öröm, melyet adtál, ^kiárad a ^Földre!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Új látóhatárok nyílnak ^Veled előttünk,
@@ -44,8 +40,6 @@
     ^Igaz öröm, mely belőlünk ^kiárad a ^Földre!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
