--- a/songs/finn-zarandokenek.tex
+++ b/songs/finn-zarandokenek.tex
@@ -20,9 +20,7 @@
     ^Istenünk ^eszközek^ént!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Sokan meg^álltak m^ár, ^elég v^olt a besz^éd,
@@ -30,9 +28,7 @@
     ^Értjük már ^üzenet^ét!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Aki sír, ^ne sírj^on, ^emeld a f^árad^tat!
@@ -40,8 +36,6 @@
     ^Újra ^szóljon ez a d^al!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
