--- a/songs/foltamadt-alleluja.tex
+++ b/songs/foltamadt-alleluja.tex
@@ -36,17 +36,13 @@
     ^Valaki ^jön fel{^{\_{é}}}d, ^Valaki ^j{\_{ö}}n fe^léd. \[D7]
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Virágban ^{\_{á}}ll a ^rét, a ^virágos ^úton ^át ^
     ^Jézus ^jön fel{^{\_{é}}}d, ^Jézus ^j{\_{ö}}n fe^léd. \[D7]
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
