--- a/songs/halovetok.tex
+++ b/songs/halovetok.tex
@@ -37,9 +37,7 @@
     Hogy ^még jobban fogjon, mint ^mikor mi akadtu\[Gsus4]nk fenn. \[G]
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     /: \[D]Vesd ki most a hálót az \[A]emberek közé,
