--- a/songs/hazamegy-a-vandor.tex
+++ b/songs/hazamegy-a-vandor.tex
@@ -21,9 +21,7 @@
     1. versszak
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     Mert \[E]új eget, és egy új \[G#m]f{\_{ö}}ldet \[F#]v{\_{á}}runk,
@@ -32,8 +30,6 @@
     Itt csak \[E]utazunk, át\[F#]utazunk.
   \endverse
 
-  \beginverse*
-    Refrén \rep{2} \[H]
-  \endverse
+  \refrain[2]{\[H]}
 
 \endsong
