--- a/songs/im-itt-jon-o.tex
+++ b/songs/im-itt-jon-o.tex
@@ -22,9 +22,7 @@
     A \[Em]lelkem ég, ó \[C]Istenem, sze\[Hm]relme\[Em]dért.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Úgy ^vágyom, Uram, ünne^pelni Veled,
@@ -33,9 +31,7 @@
     Én ^átadom az ^életem, Ti^éd le^gyen!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Az ^Úr elé együtt ^indulunk,
@@ -44,8 +40,6 @@
     Hisz ^itt a vőle^gény, ki minket ^úgy sze^ret!
   \endverse
 
-  \beginverse*
-    Refrén \echo{A \[Hm]kedve\[Em]sem, a \[Hm]ked\[Hm7]ve\[Em]sem.}
-  \endverse
+  \refrain{\echo{A \[Hm]kedve\[Em]sem, a \[Hm]ked\[Hm7]ve\[Em]sem.}}
 
 \endsong
