--- a/songs/im-jovunk-hozzad.tex
+++ b/songs/im-jovunk-hozzad.tex
@@ -28,9 +28,7 @@
     Minden mun\[Am]káért, \[E] öröme\[Am]inkért – \[F] hála Ne\[G]ked.
  \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Szavai^dért – ^ hála Ne^ked.
@@ -38,8 +36,6 @@
     És egyhá^zunkért, ^ mely egyesít ^minket – ^ hála Ne^ked.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
