--- a/songs/ime-az-isten-satora.tex
+++ b/songs/ime-az-isten-satora.tex
@@ -25,19 +25,16 @@
     ^Halál nem lesz már ^t{\_{ö}}bbé, sem ^gyász, sem fájda^lom. ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Ki ^győz, örökségül ^nyer mindent, szí^vébe írom ne^vem,
     ^Annak \_{I}ste^ne leszek, s fi^am lesz ő né^kem. ^
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
-  \vspace{5cm}
+  % TODO: Check for weirdly spaced songs (due to short songs having one page).
+  % \vspace{5cm}
 
 \endsong
