--- a/songs/itt-a-szivem.tex
+++ b/songs/itt-a-szivem.tex
@@ -4,6 +4,7 @@
 ]
 
   % https://youtu.be/W2xj6v2AiIQ
+
   \ifchorded
     \musicnote{A közjátékok első akkordjai már a refrén utolsó szótagánál ("jön") kezdődnek.}
   \fi
@@ -46,9 +47,7 @@
     ^ Míg a betű ^öl, a ^Szellem ^él^ni h^ív. ^ ^ ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 
   \ifchorded
@@ -67,9 +66,7 @@
     \echo{Megbocsátasz, hogy én is megbocsássak.}
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \ifchorded
     \beginverse*
