--- a/songs/itt-vagyok-most-jo-uram.tex
+++ b/songs/itt-vagyok-most-jo-uram.tex
@@ -21,9 +21,7 @@
     Hogy ^szeretl^ek, a ^szívem ^csak Ti^éd! ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy, U\[D]ram!
