--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -24,9 +24,7 @@
     \[A#]Né\[C]künk \[F]mégsem árt \[A]a ha\[Dm]lál!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Eladó már ^minden, ^örömöd még ^sincsen,
@@ -35,9 +33,7 @@
     ^Ér^tünk ^áldozva ^önma^gát!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Fogták, elí^télték ^és megfeszí^tették
@@ -46,8 +42,6 @@
     ^Vé^re ^eltörölt ^minden ^bűnt!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
