--- a/songs/jezus-var-terad.tex
+++ b/songs/jezus-var-terad.tex
@@ -13,26 +13,20 @@
     \[Am]Bensejéből \[C]élő víz forrása fak\[H7]ad!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Jöjjetek Hoz^zá, kik ^megfáradtat^ok,
     ^Megkönnyíti ^Jézus nehéz terhet^ek!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Jöjjetek Hoz^zá, ti ^alázatos^ak,
     ^Nektek akarja ^adni dicső ország^át!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
