--- a/songs/jojj-hivunk-jojj.tex
+++ b/songs/jojj-hivunk-jojj.tex
@@ -23,8 +23,6 @@
     ^Jöjj, hívunk, ^jöjj! Mint fo^lyó, amely ^túl^á^ra^dó!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
