--- a/songs/krisztus-el-bennem.tex
+++ b/songs/krisztus-el-bennem.tex
@@ -29,9 +29,7 @@
     Hogy \[Hm]lássa meg a vi\[Em]lág, te is \[C]mondd velünk, \[Am]éld meg és add to\[D]vább! \[D4] \[D]
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Hiába háborog ^alattunk a ten^ger,
@@ -39,8 +37,6 @@
     Ha ^Ő bennünk ^él, előttünk ^világos, ^ tiszta a ^cél. ^ ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
