--- a/songs/labadnal-terdelek.tex
+++ b/songs/labadnal-terdelek.tex
@@ -21,17 +21,13 @@
     Krisztus^ban a ^szív sza^bad, mi bennem ^szent ^ Te vagy ma^gad.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     \[C]Szívem \[G]dalban \[D]száll Fe\[Em]léd, a \[C]kísértésnek \[D]éjje\[C]lén,
     S mikor \[C]nincs \[G]erőm, em\[D]el az \[Em]ég, \[C]Jézus benned \[D]van re\[G]mény!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
