--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -28,9 +28,7 @@
     ^ Életemben követ^n{\_{é}}^m, s végül Hozzád érkez^nék.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     1. versszak \ifchorded{\nolyrics (Csak lehúzásokkal.)}\fi
