--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -27,9 +27,7 @@
     \[G] Hadd zengjek \[D]este is majd \[A4]há\[A]lá\[D]val! \[D4] \[D]
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^ Kegyelmed ^nagy, és tü^relmed ^hosszú,
@@ -38,9 +36,7 @@
     ^ Tízezer ^okom van, hogy ^zeng^jek ^még! ^ ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^ És egy nap ^majd ez a ^test el^gyengül,
@@ -49,8 +45,6 @@
     ^ Tízezer ^évig és mind^örö^kké! ^ ^ ^
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
