--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -25,44 +25,34 @@
     \[F]Jósága \[C]végtelen \[F]él, \[Gm]irgalma \[C]megmarad \[F] örök\[C]ké!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Minden szív ^áldjon, U^ram, ^magasztaljon ^Téged ^ég és ^Föld!
     ^Beszéljék ^hatalma^dat, ^zengjenek ^országod ^fényé^ről!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Nagyságod ^mérhetet^len, ^dicsőséged ^fenség, ^fényes^ség.
     ^Csodálva ^éneke^lem ^félelmes ^tetteid ^ ere^jét.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Közel vagy ^mindenki^hez, ^ ki tiszta ^szívből ^Hozzád ki^ált,
     ^Kérését ^teljesí^ted, ^ megőrzöd ^azt, ki ^Téged i^mád.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Minden nap ^dicsérem ^Őt, ^áldom az ^Urat, míg ^élek ^én.
     ^Új dallal ^színe e^lőtt, ^ujjongva ^hirdetem ^ szent nev^ét!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
