--- a/songs/mily-gyonyoru-dicserni-teged.tex
+++ b/songs/mily-gyonyoru-dicserni-teged.tex
@@ -20,9 +20,7 @@
     Hogy így \[H7]mindörökké köztünk \[C]élj, és ezért:
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Számon tartasz mindent az ^égen,
@@ -31,8 +29,6 @@
     Mint a ^gyermekeid vagyunk ^itt, és ezért:
   \endverse
 
-  \beginverse*
-    Refrén \[G]
-  \endverse
+  \refrain{\[G]}
 
 \endsong
