--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -21,9 +21,7 @@
     \[A]A víz s a tűz, \[A7]megannyi tiszta dallal!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Dicsér a föld, dicséri szent neved,
@@ -32,9 +30,7 @@
     ^Tó és folyó, ^síkság és büszke b\_{é}rc!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^A nagy világ létével énekel,
@@ -43,8 +39,6 @@
     ^Zengjük velük: ^nagy Isten áldott l\_{é}gy!
   \endverse
 
-  \beginverse*
-    Refrén \echo{\[D]Dicsérlek én!}
-  \endverse
+  \refrain{\echo{\[D]Dicsérlek én!}}
 
 \endsong
