--- a/songs/minden-nap.tex
+++ b/songs/minden-nap.tex
@@ -41,8 +41,6 @@
     U\[A]ram! \[D] \[F#m] \[E]
   \endverse
 
-  \beginverse*
-    Refrén \rep{2} \[A]
-  \endverse
+  \refrain[2]{\[A]}
 
 \endsong
