--- a/songs/mint-maria.tex
+++ b/songs/mint-maria.tex
@@ -41,9 +41,7 @@
     ^ Szereteted élő ^lángját.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     \[D] És arra \[Hm]hív, hogy újra \[C#m]éljük
