--- a/songs/nagy-vagy-urunk.tex
+++ b/songs/nagy-vagy-urunk.tex
@@ -23,9 +23,7 @@
     A megölt Bá^rány, a Győztess Oroszlán.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     /: \[A]Méltó nagy Neved,
@@ -34,8 +32,6 @@
     Mily’ n\[E]agy vagy Ur\[A]unk. :/
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
