--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -35,9 +35,7 @@
     ^ Megölel^ném az ^egész ^vilá^got!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
