--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -18,9 +18,7 @@
     Amikor \[Hm]úgy \_{é}r\[Em]zed, nyomaszt az \[A7]{\_{é}}\[D]let.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Nem taszítalak ^el, ^amikor vétke^zel,
@@ -30,8 +28,6 @@
     Ne félj, ha ^éjb{\_{e}}n ^jársz, hidd, hogy a ^fény v\_{á}r ^rád!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
