--- a/songs/nezz-testver-fel.tex
+++ b/songs/nezz-testver-fel.tex
@@ -14,26 +14,20 @@
     \[D]Félelmek, bűnök tép\[F#m]tek, de Te \[G]meggyó\[A]gyítot\[D]tál.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Figyelme szeretőn kí^sér, meghall^gatja ^az i^mám.
     ^Gyötrelmeimben vigaszt ^nyújt, ezért ^áldja ^Őt a ^szám!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Jöjjön, ki szomjas, és i^gyék, aki ^hisz, ^élni ^fog!
     ^Szívének rejtett mélyé^ből az élő ^víz ^felbu^zog.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
