--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -38,8 +38,6 @@
     \[G] Mert hogyha Te vagy velünk, \[D] ki lehet ellenünk? :/ \rep{2}
   \endchorus
 
-  \beginverse*
-    Refrén \echo{\[D] Mi állhat elle\[Em]nünk?}
-  \endverse
+  \refrain{\echo{\[D] Mi állhat elle\[Em]nünk?}}
 
 \endsong
