--- a/songs/o-az-ur.tex
+++ b/songs/o-az-ur.tex
@@ -22,36 +22,28 @@
     Feltámadott a ha^lálból, Ő az ^Úr!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
     Betölt engem Szentlel^kével, Ő az ^Úr!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
     Táplál engem szent tes^tével, Ő az ^Úr!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
     Táplál engem szent vé^rével, Ő az ^Úr!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
