--- a/songs/o-te-vagy-uram.tex
+++ b/songs/o-te-vagy-uram.tex
@@ -21,9 +21,7 @@
     És \[D]nyelvünk \[Hm]ujjon\hspace{0cm}gáss{\[G]\[E]\[E7]{\_{a}}}l!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Hatalma^sat tett vel^ünk,
@@ -32,8 +30,6 @@
     ^Vígadva ^kévét szedn{^^^{\_{e}}}k.
   \endverse
 
-  \beginverse*
-    Refrén \[A]
-  \endverse
+  \refrain{\[A]}
 
 \endsong
