--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -19,9 +19,7 @@
     De ^büntetése ^nem sújt, fele^mel!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Reménytelen a bűn után az élet,
@@ -30,8 +28,6 @@
     Csak ^egyet tudsz, a ^hulló könnye^ket!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
