--- a/songs/rajta-dicserjetek-az-ur-nevet.tex
+++ b/songs/rajta-dicserjetek-az-ur-nevet.tex
@@ -20,9 +20,7 @@
     A földtől az \[Am]égbolt magasságá\[D]ig. \[D4] \[D]
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Lássátok ^hát, mily' irgalmas hoz^zánk,
@@ -31,8 +29,6 @@
     Istent di^csérje minden teremt^mény! ^ ^
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
