--- a/songs/rejts-most-el.tex
+++ b/songs/rejts-most-el.tex
@@ -21,8 +21,6 @@
     ^Mert ^Ő ^él, és ^nagyobb ^mind\_{e}n^nél!
   \endverse
 
-  \beginverse*
-    Refrén  \[C]
-  \endverse
+  \refrain{\[C]}
 
 \endsong
