--- a/songs/ropke-fohasz.tex
+++ b/songs/ropke-fohasz.tex
@@ -12,9 +12,7 @@
     \[C]Hallja Ő, egy \[G]szó elég, az \[Am7]egekig felé\[D7]r!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Nem vagyok egyedül az ^úton, ^léptem vezeti ^Ő.
@@ -23,8 +21,6 @@
     ^Kegyelméből ^élek én, ^megnyugszom kez^én.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
