--- a/songs/sotet-fenn-az-eg.tex
+++ b/songs/sotet-fenn-az-eg.tex
@@ -43,8 +43,6 @@
     ^Hiányod a ^szívekben már a ^földtől az égig ^ér!
   \endverse
 
-  \beginverse*
-    Refrén \echo{Jöjj el h{\[A]\[E]á}t!}
-  \endverse
+  \refrain{\echo{Jöjj el h{\[A]\[E]á}t!}}
 
 \endsong
