--- a/songs/szamtalan-a-csoda.tex
+++ b/songs/szamtalan-a-csoda.tex
@@ -19,8 +19,6 @@
     ^Jézussal ^köztünk vagyunk az ^egész Földön ^egy család!
   \endverse
 
-  \beginverse*
-    Refrén \[C]
-  \endverse
+  \refrain{\[C]}
 
 \endsong
