--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -23,26 +23,20 @@
     Jöjj, ki fényt adsz lelkünk^nek, jöjj, úgy ^várunk ^Rád!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Jöjj, igazság forrá^sa, jöjj, imádunk ^mindnyá^jan!
     Jöjj, reményünk éleszd ^fel, jöjj ke^gyelmed^del!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Jöjj, a néped gyűjtsd egy^be! Jöjj, az alvót ^ébreszd ^fel!
     Jöjj, a bűntől tisztíts ^meg, báto^ríts min^ket!
   \endverse
 
-  \beginverse*
-    Refrén \rep{2} \echo{\[D]Jöjj, \[Hm]áradj \[Em]szét!}
-  \endverse
+  \refrain[2]{\echo{\[D]Jöjj, \[Hm]áradj \[Em]szét!}}
 
 \endsong
