--- a/songs/szentlelek.tex
+++ b/songs/szentlelek.tex
@@ -17,9 +17,7 @@
     Hogyha \[Em]szívünk-lelkünk mindentől sza\[A]bad.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Ajándékul ^Lelked küldted e^l, ^
@@ -28,9 +26,6 @@
     Mi is ^átadjuk most Néked élet^ünk.
   \endverse
 
-  \beginverse*
-    Refrén
-    Küldd el a \[G]Lelked, úgy \[A]kérünk, Isten\[D]ünk.
-  \endverse
+  \refrain{\\Küldd el a \[G]Lelked, úgy \[A]kérünk, Isten\[D]ünk.}
 
 \endsong
