--- a/songs/szeretem-orokke.tex
+++ b/songs/szeretem-orokke.tex
@@ -23,8 +23,6 @@
     És mi ^társaid leszünk ^örökké, hol ^boldog dalát ^zengi minden ^szív.
   \endverse
 
-  \beginverse*
-    Refrén \[C]
-  \endverse
+  \refrain{\[C]}
 
 \endsong
