--- a/songs/szeretnelek-megtalalni.tex
+++ b/songs/szeretnelek-megtalalni.tex
@@ -38,9 +38,7 @@
     ^Egyedüli kincsem ^Te vagy, Iste^nem.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     1. versszak
