--- a/songs/szuntelenul-neked-eneklek-maria.tex
+++ b/songs/szuntelenul-neked-eneklek-maria.tex
@@ -21,9 +21,7 @@
     \[Am]Elviszem az \[Dm]embe\[A#]rek kö\[C]zé.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Légy mellettem ^mindig, Isten ^Anyja,
@@ -32,8 +30,6 @@
     ^Elviszem az ^embe^rek kö^zé.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
