--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -26,9 +26,7 @@
     \[G]Daloljon \[D]ajkunk \[Em]uj\[Hm]jong\[Em]va!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Mint ^Mária ^Erzsébet ^házá^ban,
@@ -37,9 +35,7 @@
     ^Alle^luja, ^így ^zen^gi!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Kik ^kedvesek az ^Úrnak, ^dicsérik ^Őt,
@@ -48,9 +44,7 @@
     ^Hódol^junk ^szí^ne e^lőtt!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \ifchorded
     \beginverse*
