--- a/songs/tied-a-dicsoseg.tex
+++ b/songs/tied-a-dicsoseg.tex
@@ -18,8 +18,6 @@
     Fela^jánljuk a szí^vünket, így di^csérjük szent nev^ed! :/ \rep{2}
   \endverse
 
-  \beginverse*
-    Refrén \echo{Ó Hatal\[C]mas!}
-  \endverse
+  \refrain{\echo{Ó Hatal\[C]mas!}}
 
 \endsong
