--- a/songs/utad-var-rad.tex
+++ b/songs/utad-var-rad.tex
@@ -30,8 +30,6 @@
     ^Te lehetsz, ki ^elviszed az ^üzene^tét.
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
