--- a/songs/utazos-dal.tex
+++ b/songs/utazos-dal.tex
@@ -33,18 +33,14 @@
     A ve^zérem, úti^társam, úti^célom ^let^tél.
   \endverse
 
-  \beginverse*
-    \textbf{\textit{Refrén}}
-  \endverse
+  \refrain
 
   \beginverse*
     /: Veled \[Am]lendüljön a \[F]léptünk, Neked \[C]zendüljön a \[G]szívünk,
     Veled \[Am]lendüljön a \[F]léptünk, ó \[C]hű Vezé\[G]rünk! :/ \rep{2}
   \endverse
 
-  \beginverse*
-    \textbf{\textit{Refrén}}
-  \endverse
+  \refrain
 
   \beginchorus
     Ez az \[C/E]út, mit nekem \[F]adtál gyönyö\[Am]rű s néha \[G]fáj,
