--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -24,9 +24,7 @@
     A ^béna is ^az úton ^ül és ki^ált:
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     A \[Am]néma is \[G]az úton \[F]ül és (tátog),
@@ -34,9 +32,7 @@
     A \[Am]néma is \[G]az úton \[F]ül és \[E]kiált:
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     S mi ^mind csak ü^lünk és a ^szívünk ki^ált,
@@ -44,9 +40,7 @@
     S mi ^mind csak ü^lünk és a ^szívünk ki^ált:
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált,
