--- a/songs/varsz-rank.tex
+++ b/songs/varsz-rank.tex
@@ -21,9 +21,7 @@
     Ti\[E]éd lesz az egész emberi\[Am]ség. :/
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Vársz ránk, hogy ^megértesd ve^lünk,
@@ -33,8 +31,6 @@
     ^Benned, Benned élhe^tünk. :/
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
