--- a/songs/vedd-a-szivem.tex
+++ b/songs/vedd-a-szivem.tex
@@ -44,9 +44,7 @@
     Uram Ti\[Dm7]éd, Uram, Ti\[Am]éd mind\[G]en!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse*
     Vedd a \[Am]szívem!
