--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -24,9 +24,7 @@
     ^ Ha elbuknék és nagyon ^félnék, Te nem hagysz ^el és nem inogsz ^meg.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \ifchorded
     \beginverse*
@@ -41,9 +39,7 @@
     Taníts \[D]teljes hittel járni, jelen\[A]létedben élni! :/ \rep{3}
   \endverse
 
-  \beginverse*
-    Refrén \rep{2} \ifchorded{\nolyrics (Az elsőnek a végén \[D] -vel.)}\fi
-  \endverse
+  \refrain[2]{\ifchorded{\nolyrics (Az elsőnek a végén \[D]\hspace{0cm}-vel.)}\fi}
 
   \beginverse*
     Enyém \[G]vagy és \[A]én Ti\[Hm]ed. Enyém \[G]vagy és \[A]én Ti\[D]ed.
