--- a/songs/zengd-velunk.tex
+++ b/songs/zengd-velunk.tex
@@ -15,26 +15,20 @@
     \[D]Izrael háza is \[A]mondja hát, \[Hm]zengje \[G]hát nagy örö\[F#]mét!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     Az ^Úr velünk, ki lehet ^ellenünk? ^Rettegést nem isme^rünk.
     ^Jobb az Úr ereje, ^éneke, ^jobb is, ^mint az embe^ré!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Ő az én teremtő ^Istenem, ^Istenem, ki nem hagy ^el.
     ^Benne én ujjongva ^járhatok; ^élhe^tek a tenye^rén!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
