--- a/songs/alleluja.tex
+++ b/songs/alleluja.tex
@@ -24,9 +24,7 @@
     \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Föltámadt ^Krisztus, le^győzte a ha^lált,
@@ -35,9 +33,7 @@
     ^Allelu^ja, alle^l^u^ja!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Szívünkbe ^add, Uram, ^csönded, örö^möd,
@@ -46,9 +42,7 @@
     ^Allelu^ja, alle^l^u^ja!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Küzdeni ^kell, napról ^napra elkí^sér
@@ -57,8 +51,6 @@
     ^Allelu^ja, alle^l^u^ja!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
