--- a/songs/egi-kenyer.tex
+++ b/songs/egi-kenyer.tex
@@ -19,9 +19,7 @@
     \[A]Majd minden \[G]embert.\[D]
  \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^Így az egész ^ég itt van a ^Földön,
@@ -32,9 +30,7 @@
     ^ Örökkön ^örökké. ^
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
  \beginverse
     ^Nem, nem féleml^ít meg a halál se ^minket,
@@ -45,8 +41,6 @@
     ^ Bennünk és ^köztünk élsz. ^
   \endverse
 
-  \beginverse*
-    Refrén \rep{2}
-  \endverse
+  \refrain[2]
 
 \endsong
