--- a/songs/keszitsuk-el.tex
+++ b/songs/keszitsuk-el.tex
@@ -26,27 +26,21 @@
     \[^Em]Hamar itt a nap, és a \[D]Fiú újra jön,\[Am] lássuk meg az idő jel\[H]ét!
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^ Álljunk meg bátran a ^hit próbái közt, ^ ne sodorjon mindenféle ^szél!
     Szívembe rejtem és ^őrzöm igédet,^ úgy vágylak meglátni ^én.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \beginverse
     ^ Kiáltó hang szól, ^ készítsetek ^ösvényt a pusztákon ^át!
     Völgy, emelkedj fel, és ^hegy, szállj alá, ^dicsőségét mindenhol ^hadd lássák.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
   \ifchorded
     \beginverse*
@@ -59,8 +53,6 @@
     Eljön \[G]felhők\[D]ben és \[Am]nagy dicsőség\[D]ben fe\[Am]hér lovon \[Hm]ülve az \[C]Úris\[D]ten.
   \endverse
 
-  \beginverse*
-    Refrén
-  \endverse
+  \refrain
 
 \endsong
